--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -1164,3 +1164,190 @@ SYM_CODE_END(entry_SYSCALL_64)
     ```
 
     从上面可以看到，`SYM_INNER_LABEL`也是定义一个符号，与`SYS_CODE_START`宏类似，只不过没有标明地址对齐方式。
+
+--- 
+
+接下来我们看`UNWIND_HINT_ENTRY`，这个宏定义在[arch/x86/include/asm/unwind_hints.h](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/include/asm/unwind_hints.h):
+
+```C
+.macro UNWIND_HINT_ENTRY
+	VALIDATE_UNRET_BEGIN
+	UNWIND_HINT_END_OF_STACK
+.endm
+
+.macro UNWIND_HINT_END_OF_STACK
+	UNWIND_HINT type=UNWIND_HINT_TYPE_END_OF_STACK
+.endm
+```
+
+**对VALIDATE_UNRET_BEGIN展开**
+
+我们可以在include/linux/objtool.h找到`VALIDATE_UNRET_BEGIN`宏的定义：
+
+```C
+/*
+    * Use objtool to validate the entry requirement that all code paths do
+    * VALIDATE_UNRET_END before RET.
+    *
+    * NOTE: The macro must be used at the beginning of a global symbol, otherwise
+    * it will be ignored.
+    */
+.macro VALIDATE_UNRET_BEGIN
+#if defined(CONFIG_NOINSTR_VALIDATION) && \
+    (defined(CONFIG_CPU_UNRET_ENTRY) || defined(CONFIG_CPU_SRSO))
+.Lhere_\@:
+    .pushsection .discard.validate_unret
+    .long	.Lhere_\@ - .
+    .popsection
+#endif
+.endm
+```
+
+1. `.pushsection`和`.popsection`伪指令
+
+    `.pushsection` 和 `.popsection` 伪指令通常需要配对使用。 `.pushsection` 指令会将之后的代码push 到指定的 section 中, `.popsection` 伪指令用于结束push。
+
+
+    ![pushsection](https://raw.githubusercontent.com/ivanzz1001/linux-kernel-learning/master/%E7%B3%BB%E7%BB%9F%E8%B0%83%E7%94%A8/image/pushsection.jpg)
+
+    参看:
+
+    - [Using as](https://sourceware.org/binutils/docs/as/index.html)
+
+    - [GNU AS汇编器](https://zhuanlan.zhihu.com/p/533821145)
+
+
+1. `.pushsection .discard.validate_unret`
+
+    - 作用：将后续数据放入 `.discard.validate_unret`段
+
+    - 背景
+
+      - `.discard` 段在链接时被丢弃，但编译阶段会被工具（如 objtool）解析
+
+      - 该段专用于存储 返回路径验证元数据
+
+1. 总结
+
+    `.pushsection`和`.popsection`用于临时切换到一个特定的段（这里是.discard.validate_unret），在其中写入数据，然后恢复原来的段。`.long`指令用于写入一个32位的整数值，这里的表达式是`.Lhere_\@ - .`，也就是标签`.Lhere_@`的地址减去当前地址。
+
+    由于.pushsection会改变当前的段，这里的地址计算可能涉及不同段的地址空间。在汇编器中，不同的段可能有不同的基地址，因此计算跨段的地址偏移需要谨慎。不过，在这个上下文中，.discard.validate_unret可能是一个特殊的段，其地址相对于当前代码段的位置是已知的，或者在链接时会被处理。
+
+
+**对UNWIND_HINT_END_OF_STACK展开**
+
+我们可以在arch/x86/include/asm/unwind_hints.h找到`UNWIND_HINT_END_OF_STACK`宏的定义：
+
+```C
+.macro UNWIND_HINT_END_OF_STACK
+	UNWIND_HINT type=UNWIND_HINT_TYPE_END_OF_STACK
+.endm
+```
+
+1. 展开UNWIND_HINT_TYPE_END_OF_STACK
+
+    先来看看`UNWIND_HINT_TYPE_END_OF_STACK`,其定义在tools/include/linux/objtool_types.h中：
+
+    ```C
+    /*
+     * UNWIND_HINT_TYPE_END_OF_STACK: The end of the kernel stack unwind before
+     * hitting user entry, boot code, or fork entry (when there are no pt_regs
+     * available).
+     */
+    #define UNWIND_HINT_TYPE_END_OF_STACK	1
+    ```
+
+1. 展开UNWIND_HINT
+
+    可以在include/linux/objtool.h文件的第93行找到该宏:
+
+    ```C
+    /*
+     * In asm, there are two kinds of code: normal C-type callable functions and
+     * the rest.  The normal callable functions can be called by other code, and
+     * don't do anything unusual with the stack.  Such normal callable functions
+     * are annotated with the ENTRY/ENDPROC macros.  Most asm code falls in this
+     * category.  In this case, no special debugging annotations are needed because
+     * objtool can automatically generate the ORC data for the ORC unwinder to read
+     * at runtime.
+     *
+     * Anything which doesn't fall into the above category, such as syscall and
+     * interrupt handlers, tends to not be called directly by other functions, and
+     * often does unusual non-C-function-type things with the stack pointer.  Such
+     * code needs to be annotated such that objtool can understand it.  The
+     * following CFI hint macros are for this type of code.
+     *
+     * These macros provide hints to objtool about the state of the stack at each
+     * instruction.  Objtool starts from the hints and follows the code flow,
+     * making automatic CFI adjustments when it sees pushes and pops, filling out
+     * the debuginfo as necessary.  It will also warn if it sees any
+     * inconsistencies.
+     */
+    .macro UNWIND_HINT type:req sp_reg=0 sp_offset=0 signal=0
+    .Lhere_\@:
+	    .pushsection .discard.unwind_hints
+		    /* struct unwind_hint */
+		    .long .Lhere_\@ - .
+		    .short \sp_offset
+		    .byte \sp_reg
+		    .byte \type
+		    .byte \signal
+		    .balign 4
+	    .popsection
+    .endm
+    ```
+
+    这里通过`.pushsection`切换到了`.discard.unwind_hints`段，并在该段构造了一个`struct unwind_hint`结构，我们可以从tools/include/linux/objtool_types.h找到该结构：
+
+    ```C
+    /*
+     * This struct is used by asm and inline asm code to manually annotate the
+     * location of registers on the stack.
+     */
+    struct unwind_hint {
+	    u32		ip;
+	    s16		sp_offset;
+	    u8		sp_reg;
+	    u8		type;
+	    u8		signal;
+    };
+    ```
+
+    在 Linux 内核的汇编代码中，`.macro UNWIND_HINT` 宏用于生成栈展开提示信息（Unwind Hints），帮助调试器和内核的异常处理机制正确解析栈帧结构。下面简单介绍一下`UNWIND_HINT`宏各个参数的含义:
+
+    ```assembly
+    .macro UNWIND_HINT type:req sp_reg=0 sp_offset=0 signal=0
+    ```
+    
+    如下是参数说明:
+
+      - type:req：必需参数，表示栈帧类型（如函数入口、出口或中间状态）
+
+      - sp_reg（默认0）：栈指针（SP）对应的寄存器编号，遵循[DWARF](https://dwarfstd.org/)规范的寄存器编码 
+
+      - sp_offset（默认 0）：栈指针的偏移量
+
+      - signal（默认 0）：标记是否为信号处理帧
+
+---
+
+接下来是`ENDBR`，这也是一个宏，定义在arch/x86/include/asm/ibt.h中：
+
+```C
+#ifdef CONFIG_X86_64
+#define ENDBR	endbr64
+#else
+#define ENDBR	endbr32
+#endif
+```
+- 作用：Intel CET（Control-Flow Enforcement Technology）指令，标记合法的间接跳转目标地址，防御 ROP/JOP 攻击。
+
+- 指令：endbr64（64 位模式）。
+
+- 意义：系统调用入口是用户态通过 syscall 指令跳转的目标，必须标记为合法。
+
+--- 
+
+
+
+
