--- a/系统调用/4-系统调用中的内核栈与用户栈.md
+++ b/系统调用/4-系统调用中的内核栈与用户栈.md
@@ -1,1 +1,120 @@
 # Linux系统调用中的内核栈与用户栈
+
+在 Linux 操作系统中，系统调用（System Call）是用户态程序与内核交互的核心机制。在此过程中，内核栈（Kernel Stack） 和 用户栈（User Stack） 的切换与隔离是确保系统安全性和稳定性的关键。以下是详细的机制解析：
+
+# 1. 用户栈与内核栈的隔离
+
+1. **用户栈(User Stack)**
+
+    - 作用: 存储用户态程序的函数调用链、局部变量和临时数据。
+
+    - 位置: 位于用户进程的虚拟地址空间（用户空间），地址范围通常为 0x0000000000000000 到 TASK_SIZE_MAX（如 x86_64 下为 0x00007FFFFFFFFFFF）
+
+    - 权限: 用户态可读写，内核态无法直接访问（需通过安全接口）。
+
+1. **内核栈(Kernel Stack)**
+
+    - 作用：存储内核态函数调用链、中断处理上下文和临时数据。
+
+    - 位置：位于内核虚拟地址空间（内核空间），每个进程有独立的内核栈，通常与 struct thread_info 结构体相邻。
+
+    - 权限：仅在内核态可访问，用户态无法直接操作。
+
+    - 大小：默认大小通常为 8KB（可配置为 4KB 或 16KB，通过 CONFIG_THREAD_SIZE_ORDER）。
+
+# 2. 用户栈与内核栈的切换代码分析
+
+系统调用从用户栈切换到内核栈所涉及到的代码主要有如下3句:
+
+```assembly
+/* tss.sp2 is scratch space. */
+movq	%rsp, PER_CPU_VAR(cpu_tss_rw + TSS_sp2)
+SWITCH_TO_KERNEL_CR3 scratch_reg=%rsp
+movq	PER_CPU_VAR(pcpu_hot + X86_top_of_stack), %rsp
+```
+
+下面我们详细分析：
+
+## 2.1 保存用户栈指针
+
+```assembly
+movq %rsp, PER_CPU_VAR(cpu_tss_rw + TSS_sp2)
+```
+
+1. **作用**
+
+    将当前用户态栈指针（RSP）保存到当前CPU的TSS（Task State Segment）的sp2字段中
+
+1. **背景**
+
+    - TSS是x86架构中用于保存任务状态的结构，通常包含不同特权级（如ring0、ring1、ring2）的栈指针（sp0、sp1、sp2）。
+
+    - 现代内核仅使用ring0（内核态）和ring3（用户态），sp2可能未被直接使用，但此处作为临时存储用户态RSP的备用位置。
+
+    - 保存用户态RSP到TSS可能是为后续异常处理（如双重错误）提供备用栈指针，或确保在后续步骤中切换内核栈时保留用户态上下文。
+
+
+## 2.2 切换到内核页表
+
+```assembly
+SWITCH_TO_KERNEL_CR3 scratch_reg=%rsp
+```
+
+1. **作用**
+
+    切换到内核的页表基址（CR3寄存器），确保后续代码运行在内核地址空间中
+
+1. **背景**
+
+    - KPTI（内核页表隔离）:为缓解Meltdown漏洞，用户态和内核态使用不同的页表。用户态页表不映射内核内存，需通过此指令切换到内核页表。
+
+    - 宏实现：SWITCH_TO_KERNEL_CR3宏通过清除CR3的低12位中的用户页表标识（PTI_USER_PGTABLE_MASK）来切换页表，使用scratch_reg（此处为RSP）作为临时寄存器以避免破坏其他寄存器。
+
+    - 必要性：在访问内核内存（如内核栈或Per-CPU变量）前必须完成页表切换，否则可能触发缺页异常。
+
+## 2.3 切换到内核栈
+
+```assembly
+movq	PER_CPU_VAR(pcpu_hot + X86_top_of_stack), %rsp
+```
+
+1. **作用**
+
+    从Per-CPU变量pcpu_hot中加载当前进程的内核栈顶指针到RSP，完成内核栈切换
+
+1. **背景**
+
+    - Per-CPU变量pcpu_hot：存储当前CPU的“热”数据（如当前任务指针、内核栈顶），确保多核环境下各CPU独立管理上下文。
+
+    - 内核栈管理：每个进程拥有独立的内核栈，其栈顶指针在进程调度时被保存到task_struct->thread.sp，并在进程被调度到CPU时更新到pcpu_hot。
+
+    - 切换流程：通过加载X86_top_of_stack字段，RSP指向当前进程的内核栈顶，后续寄存器保存（如构造pt_regs）均在此栈上进行。
+
+1. **补充**
+
+    在进程(线程)切换过程中，会动态的更新pcpu_hot相关信息，因此当该进程(线程)发生系统调用时，我们通过上述代码获取到的栈顶就是该进程(线程)的内核栈顶。
+
+    参看如下进程(线程)切换过程中更新栈的相关代码(arch/x86/kernel/process_64.c):
+
+    ```C
+    __no_kmsan_checks
+    __visible __notrace_funcgraph struct task_struct *
+    __switch_to(struct task_struct *prev_p, struct task_struct *next_p){
+
+        ...
+        /*
+	     * Switch the PDA and FPU contexts.
+	     */
+	    raw_cpu_write(pcpu_hot.current_task, next_p);
+	    raw_cpu_write(pcpu_hot.top_of_stack, task_top_of_stack(next_p));
+
+        ...
+    }
+    ```
+## 2.4 总结
+
+- TSS.sp2：临时存储用户态RSP，为异常处理和上下文切换提供冗余。
+
+- CR3切换：确保内核内存访问安全，隔离用户态与内核态地址空间（KPTI）。
+
+- 内核栈加载：通过Per-CPU变量快速获取当前进程的内核栈，支持高效多任务调度。
