--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -17,4 +17,6 @@
 
 - [一文汇总 Linux 内核调试的方法](https://zhuanlan.zhihu.com/p/660578616)
 
+- [Linux内核启动](https://www.elecfans.com/emb/202306172112824.html)
+
 
