--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -11,6 +11,8 @@
 
 - [剖析Linux内核](https://www.bilibili.com/video/BV1mN4y1s77x/)
 
+- [Linux内核源码分析](https://www.bilibili.com/video/BV1bx4y1F755/)
+
 ## 文本教程
 
 - [linux_kernel_wiki](https://github.com/0voice/linux_kernel_wiki/tree/main)
