--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -23,4 +23,6 @@
 
 - [ljrcore](https://github.com/ljrcore)
 
+- [Linux启动代码分析](https://sstar1314.github.io/Linux%E7%B3%BB%E7%BB%9F%E5%90%AF%E5%8A%A8%E6%BA%90%E4%BB%A3%E7%A0%81%E5%88%86%E6%9E%90/)
+
 
