--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -27,3 +27,5 @@
 
 - [Linux inside](https://github.com/0xAX/linux-insides/tree/master)
 
+- [How do I get started on reading the linux kernel source code](https://www.reddit.com/r/linuxquestions/comments/xynkjp/how_do_i_get_started_on_reading_the_linux_kernel/)
+
