--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -29,3 +29,10 @@
 
 - [How do I get started on reading the linux kernel source code](https://www.reddit.com/r/linuxquestions/comments/xynkjp/how_do_i_get_started_on_reading_the_linux_kernel/)
 
+## Linux内核启动
+
+- [Linux内核Kernel启动过程](https://www.cnblogs.com/anywherego/p/18217546)
+
+- [Linux内核启动过程图解](https://blog.csdn.net/qq_45009309/article/details/137542273)
+
+- [Linux 内核启动流程与入口函数分析](https://developer.aliyun.com/article/1389541)
