--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -36,3 +36,5 @@
 - [Linux内核启动过程图解](https://blog.csdn.net/qq_45009309/article/details/137542273)
 
 - [Linux 内核启动流程与入口函数分析](https://developer.aliyun.com/article/1389541)
+
+- [Linux Booting](https://0xax.gitbooks.io/linux-insides/content/Booting/linux-bootstrap-1.html)
