--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -38,3 +38,5 @@
 - [Linux 内核启动流程与入口函数分析](https://developer.aliyun.com/article/1389541)
 
 - [Linux Booting](https://0xax.gitbooks.io/linux-insides/content/Booting/linux-bootstrap-1.html)
+
+- [Linux boot and startup](https://opensource.com/article/17/2/linux-boot-and-startup)
