--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -40,3 +40,5 @@
 - [Linux Booting](https://0xax.gitbooks.io/linux-insides/content/Booting/linux-bootstrap-1.html)
 
 - [Linux boot and startup](https://opensource.com/article/17/2/linux-boot-and-startup)
+
+- [The Linux Booting Process - 6 Steps Described in Detail](https://www.freecodecamp.org/news/the-linux-booting-process-6-steps-described-in-detail/)
