--- a/系统启动/相关文档收集.md
+++ b/系统启动/相关文档收集.md
@@ -11,3 +11,5 @@
 - [Linux boot and startup](https://opensource.com/article/17/2/linux-boot-and-startup)
 
 - [The Linux Booting Process - 6 Steps Described in Detail](https://www.freecodecamp.org/news/the-linux-booting-process-6-steps-described-in-detail/)
+
+- [浅析linux系统加载：从CPU加电到用户态，讲讲BIOS、UEFI、MBR引导、GRUB引导](https://zhuanlan.zhihu.com/p/10518502692)
