--- a/系统启动/相关文档收集.md
+++ b/系统启动/相关文档收集.md
@@ -13,3 +13,5 @@
 - [The Linux Booting Process - 6 Steps Described in Detail](https://www.freecodecamp.org/news/the-linux-booting-process-6-steps-described-in-detail/)
 
 - [浅析linux系统加载：从CPU加电到用户态，讲讲BIOS、UEFI、MBR引导、GRUB引导](https://zhuanlan.zhihu.com/p/10518502692)
+
+- [CSM、EFI、UEFI、ESP、Windows boot manager的概念与作用](https://www.zhihu.com/tardis/bd/art/1901198379981182382?source_id=1001)
