--- a/系统启动/相关文档收集.md
+++ b/系统启动/相关文档收集.md
@@ -15,3 +15,5 @@
 - [浅析linux系统加载：从CPU加电到用户态，讲讲BIOS、UEFI、MBR引导、GRUB引导](https://zhuanlan.zhihu.com/p/10518502692)
 
 - [CSM、EFI、UEFI、ESP、Windows boot manager的概念与作用](https://www.zhihu.com/tardis/bd/art/1901198379981182382?source_id=1001)
+
+- [统一 EFI 规范](https://www.intel.cn/content/www/cn/zh/architecture-and-technology/unified-extensible-firmware-interface/efi-specifications-general-technology.html)
