--- a/系统启动/附录1：硬盘分区表.md
+++ b/系统启动/附录1：硬盘分区表.md
@@ -1,3 +1,23 @@
 # 硬盘分区表
 
 
+硬盘分区表(Partition Table)是存储在硬盘最开头位置（通常是第一个扇区）的一个特殊数据结构，它的核心作用就像一张硬盘的“分区地图”或“目录”，告诉计算机操作系统：
+
+- 这块硬盘被划分成了几个独立的部分(分区)?
+
+- 每个分区从哪里开始(起始扇区)?
+
+- 每个分区到哪里结束(结束扇区)?
+
+- 每个分区是什么类型（比如：系统分区、数据分区、交换分区等）？
+
+- 哪个分区是可启动的（包含操作系统的引导文件）？
+
+# 1. 简单比喻
+
+
+
+
+# 2. 关键点详解
+
+# 3. 总结
