--- a/系统启动/附录1：硬盘分区表.md
+++ b/系统启动/附录1：硬盘分区表.md
@@ -15,9 +15,30 @@
 
 # 1. 简单比喻
 
+想象你的硬盘是一个大仓库，分区表就是这个仓库门口挂着的仓库平面图，这张图上清晰地标注了：
 
+- 仓库被隔成了几个独立的房间（分区）
 
+- 每个房间的具体位置（从哪个货架到拿个货架）
+
+- 每个房间是干什么用的（存放食品、衣物、还是作为办公室 --- 分区类型）
+
+- 哪个房间里有启动整个仓库运作的总开关（可启动分区）
+
+没有这张平面图（分区表），操作系统就不知道仓库里有哪些房间，更不知道东西该往哪个房间放或者从哪里找。
 
 # 2. 关键点详解
+
+1. **位置**
+
+
+1. **内容**
+
+
+1. **主要类型**
+
+
+1. **为什么需要分区表/分区？**
+
 
 # 3. 总结
