--- a/系统启动/附录1：硬盘分区表.md
+++ b/系统启动/附录1：硬盘分区表.md
@@ -31,14 +31,35 @@
 
 1. **位置**
 
+    位于硬盘的第一个扇区，这个扇区也称为`主引导记录`(MBR, Master Boot Record)扇区（对于MBR分区表）或`GPT头`(对于GPT分区表）。这个扇区非常重要，计算机启动时，`BIOS/UEFI`固件会首先读取并执行这里的代码。
+
 
 1. **内容**
 
-
+    - 分区条目：包含每个分区的关键信息（起始/结束扇区、大小、类型标志、是否可启动等）。MBR分区表通常只能有4个主分区条目（或3个主分区+1个扩展分区，扩展分区内可以再划分多个逻辑分区）。GPT分区表则支持几乎无限多个主分区（通常操作系统限制在128个左右）。
+  
+    - 引导代码(MBR)：在MBR分区表中，除了分区表本身，这个扇区还包含一小段可执行的引导代码（Boot Loader的一部分）。BIOS在启动时会加载并执行这段代码，它的职责是找到标记为“活动”(Active)的分区，并加载该分区上的操作系统引导程序（如Windows的Bootmgr或Linux的GRUB/LILO)
+  
+    - 磁盘签名和校验信息（GPT）：GPT分区表结构更复杂，包含保护性的MBR（兼容旧系统）、唯一的磁盘GUID、主GPT头、分区条目数组、备份GPT头和备份分区条目数组等，提供了更强的鲁棒性和数据完整性校验。
+      
 1. **主要类型**
 
+    - MBR(Master Boot Record): 传统分区表格式，有分区数量(4个主分区）和磁盘大小(最大2TB）的限制。引导代码存储在MBR扇区内。
+  
+    - GPT(GUID Partition Table): 现代分区表格式，是UEFI标准的一部分。突破了MBR的限制(支持超大磁盘，更多分区），设计更健壮、有冗余备份。引导信息存储在独立的EFI系统分区中，而不是分区表所在的第一个扇区。
 
 1. **为什么需要分区表/分区？**
 
+    - 安装多个操作系统：可以在同一块硬盘上安装Windows、Linux、macOS等
+  
+    - 隔离系统和数据：系统分区(C盘)装操作系统和程序，数据分区(D盘、E盘等）存放个人文件，重装系统时只需格式化系统分区，数据分区不受影响。
+  
+    - 优化性能/管理：为不同类型的数据（如操作系统、应用程序、媒体文件、虚拟内存）创建不同的分区，便于管理和优化（比如将频繁读写的分区放在磁盘外圈）。
+  
+    - 使用不同的文件系统：不同分区可以格式化成不同的文件系统（如NTFS, FAT32, exFAT, ext4, APFS等），以适应不同的操作系统或需求。
+  
+    - 限制空间使用：为特定用途（如日志、缓存）分配固定大小的分区。
 
 # 3. 总结
+
+硬盘分区表是硬盘上最关键的元数据之一，它定义了硬盘空间的逻辑划分方式。操作系统完全依赖分区表来识别和管理磁盘上的各个分区。没有它或者它坏了，操作系统就无法识别磁盘上的分区和数据（尽管数据本身可能还在物理磁盘上）。对分区表的任何修改（如创建、删除、调整分区大小）都是高风险操作，必须谨慎进行并备份重要数据。
